k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  resources:
                        limits:
                            memory: "128Mi"
                            cpu: "500m"
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/data
                        name: postgres-storage
                        subPath: postgres
