k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: zdend/docker-5-worker
                  resources:
                        requests:
                            cpu: "100m"
                        limits:
                            memory: "128Mi"
                            cpu: "100m"
